# SNES-SuperMonkeyIsland

./: .gitignore  .mcp.json  64ths.txt  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  TODO.md  makefile  music_nexttime.txt  snes-secret-plan.md  stillbroken.txt
audio/: registered_sfx.txt  smi.terrificaudio
data/: logo_sparkle.chr  logo_sparkle.pal
docs/: takeover_stabilization_2026-05-17.md  v5_behavior_matrix.md
mesen/: test_template.lua
src/: level1.script  losers.script  main.script  msu1.script  title_screen.script
tests/: .gitignore  README.md  clouds_behind_logo.lua  run_clouds_test.py  run_vm_tests.py
tools/: README.md  adl_patches.py  animationWriter_sfc.py  audio_analyze.py  audition_song.py  bank0_gaps.py  brk_scanner.py  bsnes_mcp_server.py  build_dist.sh  check_assets.py  clean_macros.py  cleanup_git_tracking.sh  compare_anim.py  convert_all_costumes.py  convert_sparkle_chr.py  convert_video_fps.bat  convert_video_fps.sh  costume_transparency_editor.py  create_event.py  create_missing_headers.py  create_template.py  dcos_mapping.py  decode_boot_script.py  decode_script.py  decode_sparkle_costume.py  descumm5.py  disasm_room10_scripts.py  disasm_scrp152.py  extract_obj_zplanes.py  fix_assets.sh  fix_background_dimensions.sh  fxpak_crash_dump.py  fxpak_debug.py  fxpak_push.py  gen_costume_rom.py  gen_room_objects.py  (+62 more)
tools/mesen_mcp/: AGENTS.md  CHANGELOG.md  LICENSE  README.md  __init__.py  bridge.py  pyproject.toml  session.py  tools.py  validate.py
tools/mesen_mcp/examples/: __init__.py  boot_and_screenshot.py  hook_and_trace.py  memory_diff.py
(+1194 files in other folders)
